Fix shortext multivalue min length
Former-commit-id: a67dbb5e61c6e260a683ca98b3e7f7d945056af9

--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/dynamicProperties/directives/dynamicProperty.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/dynamicProperties/directives/dynamicProperty.tpl.html
@@ -137,6 +137,7 @@
                 <tags-input ng-model="propValue.values"
                             min-tags="{{currentEntity.property.isRequired ? 1 : undefined}}"
                             add-on-blur="false"
+                            min-length="1"
                             display-property="value"
                             placeholder="Add value">
                 </tags-input>
