--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/dynamicProperties/directives/dynamicProperty.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/dynamicProperties/directives/dynamicProperty.tpl.html
@@ -59,7 +59,7 @@
         <tags-input ng-model="context.currentPropValues"
                     min-length="1"
                     min-tags="{{currentEntity.property.isRequired ? 1 : undefined}}"
-                    add-on-blur="false"
+                    add-on-blur="true"
                     display-property="value"
                     placeholder="Add value">
         </tags-input>
@@ -67,7 +67,7 @@
     <script type="text/ng-template" id="dInteger-multivalue.html">
         <tags-input ng-model="context.currentPropValues"
                     min-tags="{{currentEntity.property.isRequired ? 1 : undefined}}"
-                    add-on-blur="false"
+                    add-on-blur="true"
                     allowed-tags-pattern="^[-]?[0-9]*$"
                     min-length="1"
                     display-property="value"
@@ -77,7 +77,7 @@
     <script type="text/ng-template" id="dDecimal-multivalue.html">
         <tags-input ng-model="context.currentPropValues"
                     min-tags="{{currentEntity.property.isRequired ? 1 : undefined}}"
-                    add-on-blur="false"
+                    add-on-blur="true"
                     allowed-tags-pattern="^[-]?[0-9]+[\.]?[0-9]*$"
                     min-length="1"
                     display-property="value"
@@ -136,7 +136,7 @@
                 <span class="flag flag-{{propValue.locale.substr(3).toLowerCase()}}"></span>
                 <tags-input ng-model="propValue.values"
                             min-tags="{{currentEntity.property.isRequired ? 1 : undefined}}"
-                            add-on-blur="false"
+                            add-on-blur="true"
                             min-length="1"
                             display-property="value"
                             placeholder="Add value">
