Changed text for some labels.
Former-commit-id: 1cc573b2e39217bbe5c7b5332b980ffa6186e2b1

--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/dynamicProperties/blades/dynamicProperty-detail.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/dynamicProperties/blades/dynamicProperty-detail.tpl.html
@@ -29,7 +29,7 @@
                         <label class="form-label">
                             <input type="checkbox" ng-model="blade.currentEntity.isMultilingual" ui-validate=" 'multilingualFlagValidator($value)' " ui-validate-watch=" 'blade.currentEntity.valueType' " name="multilingualFlag">
                             <span class="check"></span>
-                            <span class="name">Multi language</span>
+                            <span class="name">Multilingual</span>
                         </label>
                     </div>
                     <div class="error" ng-if="formScope.multilingualFlag.$invalid">Only text values can be multilingual.</div>
