Minor DynamicProperties and ExportImport fixes
Former-commit-id: 76449492f3d03c180025c0d6d941d54e992ad123

--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/exportImport/blades/export-main.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/exportImport/blades/export-main.tpl.html
@@ -6,7 +6,7 @@
 <div class="blade-content">
     <div class="blade-inner">
         <div class="inner-block">
-            <div class="sub-t" ng-if="!blade.notification">Select data to export</div>
+            <div class="sub-t" ng-if="!blade.notification">Select modules to export</div>
             <div class="list __items" ng-if="!blade.notification">
                 <label class="list-item" ng-repeat="data in blade.currentEntities">
                     <input type="checkbox" ng-model="data.isChecked">
