Platform export&import refactoring
Former-commit-id: 510bf51ca0b9dd204f989bcdbbe815bc00f47752

--- a/PLATFORM/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/blades/catalogs-list.tpl.html
+++ b/PLATFORM/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/blades/catalogs-list.tpl.html
@@ -15,6 +15,9 @@
                     </ul>
                 </li>
             </ul>
+            <div class="note" ng-if="objects.length == 0">
+                No data
+            </div>
         </div>
     </div>
 </div>
