--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/exportImport/blades/export-main.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/exportImport/blades/export-main.tpl.html
@@ -6,8 +6,8 @@
 <div class="blade-content">
     <div class="blade-inner">
         <div class="inner-block">
-            <form class="form ng-pristine ng-valid">
-                <fieldset ng-if="!blade.notification">
+            <form class="form ng-pristine ng-valid" ng-if="!blade.notification">
+                <fieldset>
                     <legend>Platform entries</legend>
                     <div class="form-group">
                         <div class="column">
@@ -30,7 +30,7 @@
                         </div>
                     </div>
                 </fieldset>
-                <fieldset ng-if="!blade.notification">
+                <fieldset>
                     <legend>Choose modules to export</legend>
                     <div class="list __items">
                         <label class="list-item" ng-repeat="data in blade.currentEntities">
@@ -43,29 +43,13 @@
                 </fieldset>
             </form>
           
-            <div class="form">
+            <div class="form" ng-if="blade.notification">
                 <div class="block">
                     <div>
                         <p class="text">{{blade.notification.description}}</p>
                         <div class="block" ng-if="blade.notification.created || blade.notification.finished">
-                            <p ng-if="blade.notification.created" ng-class="{'no-data': blade.notification.created}" class="text">Start — <i class="fa fa-clock-o"></i> {{blade.notification.created | date : 'mediumTime'}}</p>
-                            <p ng-if="blade.notification.finished" ng-class="{'no-data': blade.notification.finished}" class="text">End — <i class="fa fa-clock-o"></i> {{blade.notification.finished | date : 'mediumTime'}}</p>
-                        </div>
-                        <div class="block" ng-if="blade.notification.totalCount || blade.notification.processedCount || blade.notification.errorCount">
-                            <ul class="list __info">
-                                <li class="list-item">
-                                    <div class="list-t">Total count</div>
-                                    <div class="list-descr">{{blade.notification.totalCount}}</div>
-                                </li>
-                                <li class="list-item">
-                                    <div class="list-t">Processed count</div>
-                                    <div class="list-descr">{{blade.notification.processedCount}}</div>
-                                </li>
-                                <li class="list-item">
-                                    <div class="list-t">Error count</div>
-                                    <div class="list-descr">{{blade.notification.errorCount}}</div>
-                                </li>
-                            </ul>
+                            <p ng-if="blade.notification.created" ng-class="{'no-data': blade.notification.created}" class="text">Start — <i class="fa fa-clock-o"></i> <span am-time-ago="blade.notification.created"></span></p>
+                            <p ng-if="blade.notification.finished" ng-class="{'no-data': blade.notification.finished}" class="text">End — <i class="fa fa-clock-o"></i> <span am-time-ago="blade.notification.finished"></span></p>
                         </div>
                         <div ng-if="blade.notification.errorCount > 0">
                             <span class="sub-t">Errors</span>
