--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/exportImport/blades/import-main.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/exportImport/blades/import-main.tpl.html
@@ -6,13 +6,13 @@
 <div class="blade-content">
     <div class="blade-inner">
         <div class="inner-block">
-            <form class="form">
+            <form class="form" ng-if="!blade.notification">
                 <fieldset>
                     <div>
                         <label class="form-label">Select file to import</label>
                         <div class="form-input">
                             <input type="file" uploader="uploader" nv-file-select style="z-index: 0;" tabindex="-1">
-                            <input type="text" readonly="" ng-model="blade.fileUrl">
+                            <input type="text" readonly="" ng-model="importRequest.fileUrl">
                             <button class="btn __file" type="button" onclick="$('input[type=file]').trigger('click')">
                                 <i class="btn-ico fa fa-image"></i>
                             </button>
@@ -28,54 +28,68 @@
                 </li>
                 <li class="list-item">
                     <div class="list-t">Data file created</div>
-                    <div class="list-descr">{{blade.info.created}}</div>
+                    <div class="list-descr" am-time-ago="blade.info.created"></div>
                 </li>
                 <li class="list-item">
                     <div class="list-t">Created in platform version</div>
                     <div class="list-descr">{{blade.info.platformVersion}}</div>
                 </li>
             </ul>
-
-            <div class="sub-t" ng-if="blade.info">Select data to import</div>
-            <div class="list __items" ng-if="blade.info">
-                <label class="list-item" ng-repeat="data in blade.currentEntities">
-                    <input type="checkbox" ng-model="data.isChecked">
-                    <span class="switch"></span>
-                    <span class="list-name">{{data.title}}</span>
-                    <span class="list-descr">{{data.description}}</span>
-                </label>
-            </div>
-
-            <div class="form">
+            
+            <form class="form ng-pristine ng-valid" ng-if="!blade.notification">
+                <fieldset>
+                    <legend>Platform entries</legend>
+                    <div class="form-group">
+                        <div class="column">
+                            <div class="form-control __checkbox">
+                                <label class="form-label">
+                                    <input type="checkbox" ng-model="importRequest.handleSecurity">
+                                    <span class="check"></span>
+                                    <span class="name">Security accounts and roles</span>
+                                </label>
+                            </div>
+                        </div>
+                        <div class="column">
+                            <div class="form-control __checkbox">
+                                <label class="form-label">
+                                    <input type="checkbox" ng-model="importRequest.handleSettings">
+                                    <span class="check"></span>
+                                    <span class="name">Settings</span>
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                </fieldset>
+                <fieldset>
+                    <legend>Choose modules to import</legend>
+                    <div class="list __items">
+                        <label class="list-item" ng-repeat="data in blade.currentEntities">
+                            <input type="checkbox" ng-model="data.isChecked" ng-checked="updateModuleSelection()">
+                            <span class="switch"></span>
+                            <span class="list-name">{{data.title}}</span>
+                            <span class="list-descr">{{data.description}}</span>
+                        </label>
+                    </div>
+                    <div class="note" ng-if="blade.currentEntities.length == 0">
+                        No data
+                    </div>
+                </fieldset>
+            </form>
+            <div class="form" ng-if="blade.notification">
                 <div class="block">
                     <div>
+                        <p class="text">{{blade.notification.description}}</p>
                         <div class="block" ng-if="blade.notification.created || blade.notification.finished">
-                            <p ng-if="blade.notification.created" ng-class="{'no-data': blade.notification.created}" class="text">Start — <i class="fa fa-clock-o"></i> {{blade.notification.created | date : 'mediumTime'}}</p>
-                            <p ng-if="blade.notification.finished" ng-class="{'no-data': blade.notification.finished}" class="text">End — <i class="fa fa-clock-o"></i> {{blade.notification.finished | date : 'mediumTime'}}</p>
+                            <p ng-if="blade.notification.created" ng-class="{'no-data': blade.notification.created}" class="text">Start — <i class="fa fa-clock-o"></i> <span am-time-ago="blade.notification.created"></span></p>
+                            <p ng-if="blade.notification.finished" ng-class="{'no-data': blade.notification.finished}" class="text">End — <i class="fa fa-clock-o"></i> <span am-time-ago="blade.notification.finished"></span></p>
                         </div>
-                        <div class="block" ng-if="blade.notification.totalCount || blade.notification.processedCount || blade.notification.errorCount">
-                            <ul class="list __info">
-                                <li class="list-item">
-                                    <div class="list-t">Total count</div>
-                                    <div class="list-descr">{{blade.notification.totalCount}}</div>
-                                </li>
-                                <li class="list-item">
-                                    <div class="list-t">Processed count</div>
-                                    <div class="list-descr">{{blade.notification.processedCount}}</div>
-                                </li>
-                                <li class="list-item">
-                                    <div class="list-t">Error count</div>
-                                    <div class="list-descr">{{blade.notification.errorCount}}</div>
-                                </li>
-                            </ul>
-                        </div>
+
                         <div ng-if="blade.notification.errorCount > 0">
                             <span class="sub-t">Errors</span>
                             <div class="log">
                                 <p ng-repeat="error in blade.notification.errors track by $index" class="error">{{error}}</p>
                             </div>
                         </div>
-                        <p class="text" ng-if="blade.notification.downloadUrl">Download Url: <a href="{{blade.notification.downloadUrl}}" target="_blank">{{blade.notification.downloadUrl}}</a></p>
                     </div>
                 </div>
             </div>
