Platform Export&Import add support binary data
Former-commit-id: 3d9ff76b38f514817af8791571c45e30b2bfc0ad

--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/exportImport/blades/export-main.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/exportImport/blades/export-main.tpl.html
@@ -18,6 +18,13 @@
                                     <span class="name">Security accounts and roles</span>
                                 </label>
                             </div>
+                            <div class="form-control __checkbox">
+                                <label class="form-label">
+                                    <input type="checkbox" ng-model="importRequest.handleBinaryData">
+                                    <span class="check"></span>
+                                    <span class="name">Export binary data</span>
+                                </label>
+                            </div>
                         </div>
                         <div class="column">
                             <div class="form-control __checkbox">
