--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/exportImport/blades/import-main.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/exportImport/blades/import-main.tpl.html
@@ -47,6 +47,13 @@
                                     <span class="check"></span>
                                     <span class="name">Security accounts and roles</span>
                                 </label>
+                                <div class="form-control __checkbox">
+                                    <label class="form-label">
+                                        <input type="checkbox" ng-model="importRequest.handleBinaryData">
+                                        <span class="check"></span>
+                                        <span class="name">Import binary data</span>
+                                    </label>
+                                </div>
                             </div>
                         </div>
                         <div class="column">
