Import blade. Show items from backup file only
Former-commit-id: fa6f9ffc055a2023d8c105c636aedf14f6cb103e

--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/exportImport/blades/import-main.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/exportImport/blades/import-main.tpl.html
@@ -40,7 +40,7 @@
                 <fieldset>
                     <legend>Platform entries</legend>
                     <div class="list __items">
-                        <label class="list-item">
+                        <label class="list-item" ng-if="blade.isHasSecurity">
                             <input type="checkbox" ng-model="importRequest.handleSecurity">
                             <span class="switch"></span>
                             <span class="list-name">Security</span>
@@ -52,7 +52,7 @@
                             <span class="list-name">Binary</span>
                             <span class="list-descr">Binary data</span>
                         </label>
-                        <label class="list-item">
+                        <label class="list-item" ng-if="blade.isHasSettings">
                             <input type="checkbox" ng-model="importRequest.handleSettings">
                             <span class="switch"></span>
                             <span class="list-name">Settings</span>
