notifications, platform journal (all notifications), creating notification (by default at start), showing languages flag, fixes in deleting last template
Former-commit-id: 560f26de06cba27d7517ba052ff923ff16485eed

--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/notifications/blades/notifications-edit-template.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/notifications/blades/notifications-edit-template.tpl.html
@@ -29,7 +29,7 @@
 						<div class=" form-group" ng-if="blade.isNew" style="margin-top:-16px;">
 							<div class="form-input">
 								<ui-select ng-model="blade.currentEntity.language">
-									<ui-select-match placeholder="Select...">{{$select.selected}}</ui-select-match>
+									<ui-select-match placeholder="Select..."><span class="flag flag-{{blade.getFlag($select.selected)}}"></span> {{$select.selected}}</ui-select-match>
 									<ui-select-choices repeat="x in blade.languages">
 										<span class="flag flag-{{blade.getFlag(x)}}"></span>
 										<span ng-bind-html="x"></span>
