--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/exportImport/blades/export-main.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/exportImport/blades/export-main.tpl.html
@@ -33,10 +33,10 @@
                 <fieldset>
                     <legend>Choose modules to export</legend>
                     <div class="list __items">
-                        <label class="list-item" ng-repeat="data in blade.currentEntities">
+                        <label class="list-item" ng-repeat="data in exportRequest.exportManifest.modules">
                             <input type="checkbox" ng-model="data.isChecked" ng-checked="updateModuleSelection()">
                             <span class="switch"></span>
-                            <span class="list-name">{{data.title}}</span>
+                            <span class="list-name">{{data.id}}</span>
                             <span class="list-descr">{{data.description}}</span>
                         </label>
                     </div>
