--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/pushNotifications/blade/history.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/pushNotifications/blade/history.tpl.html
@@ -7,7 +7,7 @@
                         <tr>
                             <th class="table-col{{$index == 0 ? ' __product-img' : ''}}{{$index == 2 ? ' __date' : ''}}" ng-repeat="column in columns" ng-click="setOrder(column)" ng-class="(column.checked) ? '__sorted' : ''">
                                 {{column.title}}
-                                <i ng-class="column.checked ? (column.reverse ?'sort-up':'sort-down') : ''" class="table-ico fa"></i>
+                                <i class="table-ico sort fa" ng-class="column.checked ? (column.reverse ? 'fa-sort-up' : 'fa-sort-down') : ''"></i>
                             </th>
                         </tr>
                     </thead>
