Add copy links for images, Fix editor to reviews
Former-commit-id: 7c11f704098a13c4cc9167029646ea33c4bd88f3

--- a/PLATFORM/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/blades/images.tpl.html
+++ b/PLATFORM/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/blades/images.tpl.html
@@ -37,6 +37,7 @@
         </div>
 
         <script type="text/ng-template" id="imageTemplate.html">
+            <a class="tile-action" ng-click="copyUrl(image)"></a>
             <img class="tile-img" ng-src="{{image.url ? image.url : ''}}">
         </script>
     </div>
