--- a/PLATFORM/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/blades/item-property-list.tpl.html
+++ b/PLATFORM/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/blades/item-property-list.tpl.html
@@ -1,11 +1,11 @@
 ﻿<div class="blade-static __bottom" ng-if="blade.bottomTemplate">
     <ng-include src='blade.bottomTemplate'> </ng-include>
 </div>
-<div class="blade-content">
+<div class="blade-content __gray">
     <div class="blade-inner">
         <div class="inner-block">
             <form name="itemProperties" class="form" ng-init="propGroups = [{title:'Product properties', type:'product'}, {title:'Variation properties', type:'variation'}]">
-                <fieldset class="stripe" ng-repeat="propGroup in propGroups" ng-init="setForm(itemProperties)">
+                <fieldset ng-repeat="propGroup in propGroups" ng-init="setForm(itemProperties)">
                     <legend>
                         {{propGroup.title}}: <span class="count">{{properties.length}}</span>
                     </legend>
