--- a/PLATFORM/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/blades/catalog-property-list.tpl.html
+++ b/PLATFORM/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/blades/catalog-property-list.tpl.html
@@ -1,4 +1,4 @@
-﻿<div class="blade-content">
+﻿<div class="blade-content __gray">
     <div class="blade-inner">
         <div class="inner-block" ng-init="propGroups = [{title:'Catalog properties', type:'Catalog'}, {title:'Category properties', type:'Category'}, {title:'Product properties', type:'Product'}, {title:'Variation properties', type:'Variation'}]">
             <form name="contextEntityDetailForm" class="form">
