--- a/PLATFORM/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/blades/catalog-property-list.tpl.html
+++ b/PLATFORM/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/blades/catalog-property-list.tpl.html
@@ -2,7 +2,7 @@
     <div class="blade-inner">
         <div class="inner-block" ng-init="propGroups = [{title:'Catalog properties', type:'Catalog'}, {title:'Category properties', type:'Category'}, {title:'Product properties', type:'Product'}, {title:'Variation properties', type:'Variation'}]">
             <form name="contextEntityDetailForm" class="form">
-                <fieldset class="stripe" ng-repeat="propGroup in propGroups" ng-init="setForm(contextEntityDetailForm);">
+                <fieldset ng-repeat="propGroup in propGroups" ng-init="setForm(contextEntityDetailForm);">
                     <legend>
                         {{propGroup.title}}: <span class="count">{{properties.length}}</span>
                     </legend>
