catalog - API documentation added
Former-commit-id: 475d9b6d7078e0fb228a3534e38dbd3f3cdd435d

--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/dynamicProperties/blades/dynamicProperty-detail.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/dynamicProperties/blades/dynamicProperty-detail.tpl.html
@@ -56,10 +56,9 @@
                     <span class="list-t">Value Type</span>
                     <span class="list-descr">{{blade.currentEntity.valueType}}</span>
                 </li>
-                <li class="list-item" ng-class="{'__selected': currentChild === 'dict', '__disabled': !blade.currentEntity.isDictionary || blade.isNew}" ng-click='openChild("dict")'>
+                <li class="list-item" ng-class="{'__selected': currentChild === 'dict', '__disabled': !blade.currentEntity.isDictionary}" ng-click='openChild("dict")'>
                     <span class="list-t">Dictionary values</span>
-                    <span class="list-descr" ng-if="blade.currentEntity.isDictionary && !blade.isNew">Manage dictionary</span>
-                    <div class="error" ng-if="blade.currentEntity.isDictionary && blade.isNew">Create property before managing dictionary values</div>
+                    <span class="list-descr" ng-if="blade.currentEntity.isDictionary">Manage dictionary</span>
                 </li>
             </ul>
         </div>
