--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/dynamicProperties/blades/property-dictionary.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/dynamicProperties/blades/property-dictionary.tpl.html
@@ -1,4 +1,5 @@
-﻿<div class="blade-content">
+﻿<div class="blade-static __bottom" ng-include="'Scripts/common/templates/ok-cancel2.tpl.html'" ng-if="!blade.isApiSave"></div>
+<div class="blade-content">
     <div class="blade-inner">
         <div class="inner-block">
             <form class="form" ng-submit="add(pdForm)" name="pdForm" novalidate autocomplete="off">
