--- a/PLATFORM/Modules/Swashbuckle/Swashbuckle.Module.Web/SwaggerUi/CustomAssets/index.html
+++ b/PLATFORM/Modules/Swashbuckle/Swashbuckle.Module.Web/SwaggerUi/CustomAssets/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>VirtoCommerce Platform RESTful API documentation</title>
-  <link rel="icon" type="image/png" href="images/favicon-32x32-png" sizes="32x32" />
-  <link rel="icon" type="image/png" href="images/favicon-16x16-png" sizes="16x16" />
+  <link rel="icon" type="image/png" href="images/logo_small-png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="images/logo_small-png" sizes="16x16" />
   <!-- <link href='css/typography.css' media='screen' rel='stylesheet' type='text/css'/> -->
   <link href='css/reset-css' media='screen' rel='stylesheet' type='text/css'/>
   <link href='css/screen-css' media='screen' rel='stylesheet' type='text/css'/>
