platform - module installation process using push notifications
Former-commit-id: cb3ccab831effc0e366f62038c4a39bb2f74667d

--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/packaging/wizards/newModule/module-wizard-progress-step.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/packaging/wizards/newModule/module-wizard-progress-step.tpl.html
@@ -1,16 +1,21 @@
 ﻿<div class="blade-static __bottom">
-    <button class="btn" ng-click="restarted=true; restart();" ng-disabled="!completed || restarted">
+    <button class="btn" ng-click="restarted=true; restart();" ng-disabled="!blade.currentEntity.finished || restarted">
         <span>Restart</span>
     </button>
 </div>
 <div class="blade-content">
     <div class="blade-inner">
-    	<div class="inner-block">
-    		<div class="sub-t">Messages</div>
-		    <div class="log">
-		        <p ng-repeat="x in currentEntity.progressLog" ng-class="{'__info' : x.level==='Info', '__warning': x.level==='Warning', '__debug': x.level==='Debug', '__error': x.level==='Error'}">{{x.message}}</p>
-		    </div>
-		    <p class="text" ng-if="completed">Module installation process completed. <br />Restart the application now or later.</p>
-    	</div>
+        <div class="inner-block">
+            <div class="sub-t">{{blade.currentEntity.title}}</div>
+            <div class="block" ng-if="blade.currentEntity.created || blade.currentEntity.finished">
+                <p ng-if="blade.currentEntity.created" ng-class="{'no-data': blade.currentEntity.created}" class="text">Start — <i class="fa fa-clock-o"></i> <span am-time-ago="blade.currentEntity.created"></span></p>
+                <p ng-if="blade.currentEntity.finished" ng-class="{'no-data': blade.currentEntity.finished}" class="text">End — <i class="fa fa-clock-o"></i> <span am-time-ago="blade.currentEntity.finished"></span></p>
+            </div>
+            <div class="sub-t">Progress messages</div>
+            <div class="log">
+                <p ng-repeat="x in blade.currentEntity.progressLog" ng-class="{'__info' : x.level==='Info', '__warning': x.level==='Warning', '__debug': x.level==='Debug', '__error': x.level==='Error'}">{{x.message}}</p>
+            </div>
+            <p class="text" ng-if="blade.currentEntity.finished">Module installation process completed. <br />Restart the application now or later.</p>
+        </div>
     </div>
 </div>
