dynamic properties - Html value type added to UI
Former-commit-id: 7aed054d5cbf914c4b73a8ed6dadd1447fa41596

--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/dynamicProperties/directives/dynamicProperty.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/dynamicProperties/directives/dynamicProperty.tpl.html
@@ -55,6 +55,10 @@
         </label>
     </script>
 
+    <script type="text/ng-template" id="dHtml.html">
+        <div class="editable" text-angular ng-model="context.currentPropValues[0].value" text-angular-name="myEditor"></div>
+    </script>
+
     <script type="text/ng-template" id="dShortText-multivalue.html">
         <tags-input ng-model="context.currentPropValues"
                     min-length="1"
