--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/dynamicProperties/blades/property-valueType.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/dynamicProperties/blades/property-valueType.tpl.html
@@ -38,6 +38,12 @@
                     <span class="list-t">Boolean</span>
                     <span class="list-descr">Switch type.</span>
                 </label>
+                <label class="list-item" ng-mouseup="selectOption('Html')">
+                    <input type="checkbox" ng-checked="'Html' ===  blade.currentEntity.valueType">
+                    <span class="switch"></span>
+                    <span class="list-t">Html</span>
+                    <span class="list-descr">Html markup.</span>
+                </label>
             </ul>
         </div>
     </div>
