--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/settings/blades/settings-detail.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/settings/blades/settings-detail.tpl.html
@@ -7,6 +7,7 @@
                     <div class="form-group" ng-repeat="data in blade.currentEntities[groupName]" title="{{data.description}}">
                         <label class="form-label">{{data.title}} <a href="" ng-click="editArray(data);" ng-if="data.isArray"><i class="form-ico fa fa-pencil"></i></a></label>
                         <div class="form-input" ng-class="data.valueType==='Boolean' ? 'switch' : '__number'" ng-if="!(data.allowedValues.length>0) && !data.isArray">
+                            <input ng-model="data.value" ng-if="data.valueType==='LongText'" />
                             <input ng-model="data.value" ng-if="data.valueType==='ShortText'" />
                             <input ng-model="data.value" type="password" ng-if="data.valueType==='SecureString'">
                             <input va-number ng-model="data.value" type="text" min="0" step="1" ng-if="data.valueType==='Integer'">
