platform breadcrumbs - breadcrumbHistoryService and "Back" button added
Former-commit-id: 8513f0b30e414711697710ddc7f84fd8b9b0283a

--- a/PLATFORM/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/blades/common/catalog-items-select.tpl.html
+++ b/PLATFORM/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/blades/common/catalog-items-select.tpl.html
@@ -1,5 +1,5 @@
 ﻿<div class="blade-static __expanded" ng-if="!isCatalogSelectMode()">
-    <va-breadcrumb ng-model="blade.breadcrumbs"></va-breadcrumb>
+    <va-breadcrumb ng-model="blade.breadcrumbs" blade-id="blade.id"></va-breadcrumb>
     <div class="form-group">
         <div class="form-input __search">
             <input type="text" placeholder="Search keyword..." ng-model="filter.searchKeyword" ui-keyup="{'enter':'blade.refresh()'}">
