--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/settings/blades/settingGroup-list.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/settings/blades/settingGroup-list.tpl.html
@@ -1,5 +1,5 @@
 ﻿<div class="blade-static __expanded">
-    <va-breadcrumb ng-model="blade.breadcrumbs"></va-breadcrumb>
+    <va-breadcrumb ng-model="blade.breadcrumbs" blade-id="blade.id"></va-breadcrumb>
     <div class="form-group">
         <div class="form-input __search">
             <input placeholder="Search keyword..." ng-model="blade.searchText">
