--- a/PLATFORM/Modules/Store/VirtoCommerce.StoreModule.Web/Scripts/blades/paymentMethod-list.tpl.html
+++ b/PLATFORM/Modules/Store/VirtoCommerce.StoreModule.Web/Scripts/blades/paymentMethod-list.tpl.html
@@ -20,7 +20,7 @@
                             </td>
                             <td class="table-col __product-control" ng-click='selectNode(data)'>
                                 <div class="product-img">
-                                    <div class="image" style="background-image: url({{data.logoUrl}})" ng-if="data.logoUrl"></div>
+                                    <div class="image" style="background-image: url('{{data.logoUrl}}')" ng-if="data.logoUrl"></div>
                                     <i class="table-ico fa fa-image" ng-if="!data.logoUrl"></i>
                                 </div>
                             </td>
