--- a/PLATFORM/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/blades/images.tpl.html
+++ b/PLATFORM/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/blades/images.tpl.html
@@ -30,7 +30,8 @@
                 <div class="sub-t">Progress:</div>
                 <div class="progress-bar __aqua" ng-style="{'width': uploader.progress + '%'}"></div>
             </div>
-            
+
+            <p class="note">Drag and drop an image to top left corner of images area to make it the default image.</p>
             <div class="tile-group triple __images-list" ui-sortable="sortableOptions" ng-model="blade.currentEntity.images">
                 <div class="tile" ng-class="{'double': $first, '__selected': image.$selected}" ng-click="toggleImageSelect($event, image)" ng-repeat="image in blade.currentEntity.images" ng-include="'imageTemplate.html'"></div>
             </div>
