--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/packaging/wizards/newModule/module-wizard-progress-step.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/packaging/wizards/newModule/module-wizard-progress-step.tpl.html
@@ -16,7 +16,7 @@
             <div class="log">
                 <p ng-repeat="x in blade.currentEntity.progressLog" ng-class="{'__info' : x.level==='Info', '__warning': x.level==='Warning', '__debug': x.level==='Debug', '__error': x.level==='Error'}">{{x.message}}</p>
             </div>
-            <p class="text" ng-if="blade.currentEntity.finished">Module installation process completed. <br />Restart the application now or later.</p>
+            <p class="note" ng-if="blade.currentEntity.finished">Module installation process completed. <br />Restart the application now or later.</p>
         </div>
     </div>
 </div>
