--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/dynamicProperties/blades/dynamicObject-list.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/dynamicProperties/blades/dynamicObject-list.tpl.html
@@ -11,7 +11,7 @@
             <div class="text" ng-if="blade.currentEntities.length == 0">No objects supports dynamic properties yet.</div>
             <ul class="list __items" ng-if="blade.currentEntities.length > 0">
                 <li class="list-item" ng-repeat="data in blade.currentEntities | filter:searchText | orderBy: 'name' track by data.name" ng-class="{'__selected': data.name === selectedNodeId}" ng-click='selectNode(data)'>
-                    <span class="list-t">{{data.name}}</span>
+                    <span class="list-t" title="{{data.name}}">{{data.name}}</span>
                 </li>
             </ul>
         </div>
