--- a/PLATFORM/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/blades/images.tpl.html
+++ b/PLATFORM/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/blades/images.tpl.html
@@ -17,7 +17,7 @@
                 </div>
 
                 <!-- 2. ng-file-select | ng-file-select="options" -->
-                <div class="form-input">
+                <div class="form-input __file">
                     <input type="file" multiple uploader="uploader" nv-file-select style="z-index: 0;" tabindex="-1">
                     <input type="text" style="z-index: 1; cursor: default;" readonly="">
                     <button class="btn __file" type="button" onclick="$('input[type=file]').trigger('click')" title="Open image file">
@@ -25,7 +25,7 @@
                     </button>
                 </div>
 
-                <div class="form-input">
+                <div class="form-input __file">
                     <input ng-model="blade.newExternalImageUrl" type="url" placeholder='Paste image URL here' tabindex="-1">
                     <button class="btn __file" type="button" ng-click="addImageFromUrl()" title="Add image by URL">
                         <i class="btn-ico fa fa-plus"></i>
