--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/settings/blades/settings-detail.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/settings/blades/settings-detail.tpl.html
@@ -11,7 +11,7 @@
                             <input ng-model="data.value" ng-if="data.valueType==='ShortText'" />
                             <input ng-model="data.value" type="password" ng-if="data.valueType==='SecureString'">
                             <input va-number ng-model="data.value" type="text" min="0" step="1" ng-if="data.valueType==='Integer'">
-                            <input va-number ng-model="data.value" type="text" min="0" step="1" ng-if="data.valueType==='Decimal'">
+                            <input  ng-model="data.value" type="number" ng-if="data.valueType==='Decimal'">
                             <label class="form-label __switch" ng-if="data.valueType==='Boolean'">
                                 <input type="checkbox" ng-model="data.value" />
                                 <span class="switch"></span>
